fixing mobile overflow issue

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -227,8 +227,9 @@ img.bckgdShape#shape6 {
   
   img.pic3 {
     z-index: 1;
-    width: calc(57vw - 60px);
-    left: calc(40vw + 60px);
+    width: calc(57vw-60px);
+    left: auto;
+    right: 20px;
     top: 380px;
   }
   
@@ -242,7 +243,8 @@ img.bckgdShape#shape6 {
   img.pic5 {
     z-index: 3;
     width: calc(45vw - 60px);
-    left: calc(50vw + 60px);
+    left: auto;
+    right: 20px;
     top: 900px;
   }
   
@@ -256,7 +258,8 @@ img.bckgdShape#shape6 {
   img.pic7 {
     z-index: 3;
     width: calc(29vw - 60px);
-    left: calc(43vw + 60px);
+    left: auto;
+    right: 20px;
     top: 1450px;
   }
   
@@ -264,13 +267,14 @@ img.bckgdShape#shape6 {
     z-index: 1;
     width: calc(30vw - 60px);
     left: 60px;
-    top: 1650px;
+    top: 1600px;
   }
   
   img.pic9 {
     z-index: 1;
     width: calc(60vw - 60px);
-    left: calc(27vw + 60px);
+    left: auto;
+    right: 20%;
     top: 1900px;
   }
   
